@@ -2,6 +2,7 @@
 [Alexandr Topilski]
 - LZ4/Snappy/Bzip2 views
 - BASE64 view
+- Db types review
 - JSON.DEL command UI handling
 
 1.20.2 / November 3, 2018
